--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -5,20 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
     <link rel="stylesheet" href="Assets/CSS/bootstrap.css">
-    <!-- <link rel="stylesheet" href="Assets/CSS/materialize.css"> -->
     <link rel="stylesheet" href="Assets/CSS/Amit2020style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
-    <script src="Module/MyScript.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
 </head>
 <body>
     <nav class="navbar sticky-top navbar-expand-sm navbar-dark bg-dark">
         <div class="container">
             <a class="navbar-brand" href="#"> About <i class="fab fa-connectdevelop"></i></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse justify-content-end" id="navbarColor03">
+            <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="nav navbar-nav navStyle nav-tabs">
                     <li class="nav-item">
                         <a class="nav-link active" href="signup.html">Registration <i class="fas fa-users"></i> <span class="sr-only">(current)</span></a>
@@ -30,13 +31,10 @@
             </div>
         </div>
     </nav>
-    <div class="container1">
+    <div class="container">
         <div class="row">
-            <div class="col-sm-6" style="border: 2px solid red; background-color: blue; height: 100vh;">
-                    <img src="Assets/Images/pic.jpg" id="optionalstuff" alt="" style="max-width: 100%; max-height: 100%; display: block; height: 100vh;">
-            </div>
-            <div class="col-sm-6" style="border: 1px solid red; background-color: rgba(0, 0, 0, 0.719);">
-                <div class="container" style="padding-top: 100px;">
+            <div class="col-sm-12" style="background-color: rgba(0, 0, 0, 0.719);">
+                <div class="container" style="padding-top: 6%; padding-bottom: 6%;">
                     <form class="box" action="/" method="POST">
                         <center>
                             <div class="row justify-content-sm-center">
@@ -71,6 +69,9 @@
                     </form>
                 </div>
             </div>
+            <!-- <div class="col-sm-6" style="border: 2px solid red; background-color: blue; height: 100vh;">
+                    <img src="Assets/Images/pic.jpg" id="optionalstuff" alt="" style="max-width: 100%; max-height: 100%; display: block; height: 100vh;">
+            </div> -->
         </div>
     </div>
 </body>
