--- a/frontend/index.html
+++ b/frontend/index.html
@@ -49,7 +49,7 @@
         </div>
       </nav> -->
     <nav class="navbar sticky-top navbar-expand-sm navbar-dark bg-dark">
-        <div class="container-fluid">
+        <div class="container">
             <a class="navbar-brand" href="#"> About <i class="fab fa-connectdevelop"></i></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -69,7 +69,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12" style="background-color: rgba(0, 0, 0, 0.719);">
-                <div class="container" style="padding-top: 15%; padding-bottom: 15%;">
+                <div class="container" style="padding-top: 12%; padding-bottom: 12%;">
                     <form class="box" method="POST">
                         <center>
                             <div class="row justify-content-sm-center">
