--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -34,14 +34,14 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12" style="background-color: rgba(0, 0, 0, 0.719);">
-                <div class="container" style="padding-top: 6%; padding-bottom: 6%;">
+                <div class="container" style="padding-top: 8%; padding-bottom: 8%;">
                     <form class="box" action="/" method="POST">
                         <center>
-                            <div class="row justify-content-sm-center">
+                            <!-- <div class="row justify-content-sm-center">
                                 <div class="col-sm-8 thumbnail">
                                     <label class="label" for="exampleInputEmail1">ChatID</label>
                                     <input required type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="ChatID" name="ChatID"></div>
-                            </div><br>
+                            </div><br> -->
                             <div class="row justify-content-sm-center">
                                 <div class="col-sm-8 thumbnail">
                                     <label class="label" for="exampleInputPassword1">Name</label>
